[IMP](web) 增加上传插件的接口
